syntax = "proto3";

package main;

service Game {
    rpc Create (GameSettings) returns (GameID);
    rpc Join (GameID) returns (PlayerAssigment);
    rpc Move (stream UserMove) returns (stream MoveInfo);
}

message GameSettings{
    uint32 horizontalSize = 1;
    uint32 verticalSize = 2;
    bool isHorizontalCyclic = 3;
}

message GameID {
    string id = 1;
}

message UserMove {
    uint32 x = 1;
    string identityToken = 2;
}

enum Player{
    P1 = 0;
    P2 = 1;
}

message MoveInfo{
    bool isLastMove = 1;
    uint32 x = 2;
    Player player = 3;
}

message PlayerAssigment{
    Player player = 1;
    string identityToken = 2;
}
